[gd_scene load_steps=17 format=3 uid="uid://3ptwf1hgmv30"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_8vd7s"]
[ext_resource type="Texture2D" uid="uid://b2k76umawu2da" path="res://player/player_assets/down.png" id="2_ntd5h"]
[ext_resource type="PackedScene" uid="uid://de3cin87fgqty" path="res://coin/coin_particle.tscn" id="2_wh06t"]
[ext_resource type="Texture2D" uid="uid://b4sqg7pkofpyg" path="res://player/player_assets/idle1.png" id="3_bfoum"]
[ext_resource type="Texture2D" uid="uid://b3de2em4cu8tg" path="res://player/player_assets/idle2.png" id="4_m321m"]
[ext_resource type="Texture2D" uid="uid://dp8b0ffn2fis7" path="res://player/player_assets/idle3.png" id="5_ruc2t"]
[ext_resource type="Texture2D" uid="uid://dc01pkxs14cml" path="res://player/player_assets/left.png" id="6_1y6wh"]
[ext_resource type="Texture2D" uid="uid://c88l4ixg3e37w" path="res://player/player_assets/right.png" id="7_bnns7"]
[ext_resource type="Texture2D" uid="uid://o5wrswk4vlka" path="res://player/player_assets/up.png" id="8_j0di8"]
[ext_resource type="PackedScene" uid="uid://dqurdcbj8l2h1" path="res://bat.tscn" id="9_vuex4"]
[ext_resource type="PackedScene" uid="uid://cw0ahbmihrd7y" path="res://managers/hat_manager.tscn" id="11_g3ee0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yx1gr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ntd5h")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bfoum")
}],
"loop": true,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_m321m")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ruc2t")
}],
"loop": true,
"name": &"idle3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_1y6wh")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bnns7")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_j0di8")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1106e"]
size = Vector2(54, 49)

[sub_resource type="CircleShape2D" id="CircleShape2D_l7tk4"]
radius = 27.0185

[sub_resource type="Animation" id="Animation_q768t"]
resource_name = "idle"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1), Vector2(1, 1), Vector2(1, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xi8fk"]
_data = {
"idle": SubResource("Animation_q768t")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_8vd7s")
coin_particle = ExtResource("2_wh06t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_yx1gr")
animation = &"up"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_1106e")

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l7tk4")
debug_color = Color(0.963956, 0, 0.49564, 0.42)

[node name="Bat" parent="." instance=ExtResource("9_vuex4")]
visible = false
position = Vector2(0, 0)

[node name="ParticlePoint" type="Marker2D" parent="."]
position = Vector2(0, -31)

[node name="HatManager" parent="." instance=ExtResource("11_g3ee0")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xi8fk")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
